--- a/src/app/pages/recommend-parental/recommend-parental.component.css
+++ b/src/app/pages/recommend-parental/recommend-parental.component.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 300px;
+    /* padding-top: 300px; /* 300px */
 
 }
 
